refactor: 검색 기능 추가에 따른 수정 사항 (#133)
- GymRepository, GymService